Detected outliers and if there are dropped or changed their values.

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -13,6 +13,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading Dataset and Analyze Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 168,
    "metadata": {},
@@ -29,6 +36,13 @@
    "outputs": [],
    "source": [
     "data = pd.read_excel(DATASET_PATH)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rename Columns"
    ]
   },
   {
@@ -261,12 +275,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 172,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "user_data = data.iloc[data[\"user_id\"].drop_duplicates().index, :]"
+    "## Create User Dataframe for unique Users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 418,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(196, 28)"
+      ]
+     },
+     "execution_count": 418,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_data = data.iloc[data[\"user_id\"].drop_duplicates().index, :]\n",
+    "user_data.shape"
    ]
   },
   {
@@ -549,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### High Correlations\n",
+    "## High Correlations\n",
     "Weight - bmi \n",
     "height - bmi\n",
     "drug_start_day - drug_interval\n",
@@ -801,7 +834,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sklearn Train Test Split"
+    "# Train Test Split"
    ]
   },
   {
@@ -907,7 +940,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Traininig Data"
+    "# Preprocess and Train"
    ]
   },
   {
@@ -1487,7 +1520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ordinal Encoder Feature Importance Predicting Side Effect"
+    "## Ordinal Encoder Feature Importance Predicting Side Effect"
    ]
   },
   {
@@ -1592,7 +1625,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Outliers"
+    "## Outliers"
    ]
   },
   {
@@ -3156,6 +3189,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest Train and Test Score"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 416,
    "metadata": {},
@@ -3196,13 +3236,6 @@
     "# Random forest test score\n",
     "clf.score(X_test, y_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
